# RBE-500

./: .gitignore  README.md
final-project/: README.MD
final-project/install/: local_setup.sh  setup.sh
final-project/install/rrbot_description/share/rrbot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
final-project/log/: latest_build
final-project/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
final-project/src/install/scara_pubsub/share/scara_pubsub/: package.dsv  package.ps1  package.sh  package.xml  package.zsh
final-project/src/log/: latest_build
final-project/src/scara_interfaces/: CMakeLists.txt
final-project/src/scara_pubsub/: package.xml  setup.cfg  setup.py
python-practice/: arithmetic.py  factorial.py  stringx.py
python-practice/mylib/: tree.py
ros/install/: local_setup.sh  setup.sh
ros/log/: latest_build  latest_test
ros/src/euler_to_quat/: package.xml  setup.py
ros/src/euler_to_quat/euler_to_quat/: zyx_subscriber.py
ros/src/euler_to_quat/test/: mytest.sh
ros/src/fw_kin/: package.xml  setup.cfg  setup.py
ros/src/fw_kin/install/: setup.sh
ros/src/fw_kin/log/: latest_build
ros/src/fw_kin/test/: my_test.sh
ros/src/py_intpubsub/: package.xml  setup.cfg  setup.py
ros/src/py_intpubsub/py_intpubsub/: int_subscriber.py
ros/src/rrr/: package.xml  setup.cfg  setup.py
ros/src/rrr/install/: local_setup.sh
ros/src/rrr/rrr/: 3_5_robot.py
ros/src/rrr/test/: mytest2.sh
ros/src/sid_package/: package.xml  setup.cfg  setup.py
(+106 files in other folders)
