<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>scara_pubsub</name>
  <version>0.0.0</version>
  <description>RBE 500 Final Project forward kin pub/sub and inverse kin service client</description>
  <maintainer email="ssuresh@wpi.edu">Siddarth Suresh</maintainer>
  <license>Apache License 2.0</license>
  
  <depend>rclp</depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>  
  <exec_depend>scara_interfaces</exec_depend>  
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group> 
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
